--- a/index.html
+++ b/index.html
@@ -1,102 +1,132 @@
 <!DOCTYPE html>
-<html lang="en-us">
+
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>Douglas Drake Bio</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
 
-  <h1>Douglas Drake</h1>
+  <div class="container">
+    <h1>Douglas Drake Bio</h1>
 
-  <!--
+    <!--
   <img src="https://placehold.it/200x200" alt="Your Name">
   -->
 
-  <h2>Introduction</h2>
+    <h2>Introduction</h2>
 
-  <h2>Projects</h2>
-  <ul>
-    <li> Heroku Apps</li>
+    <h2>Projects</h2>
     <ul>
-      <li><a target="_blank" href="https://ghcn-leaflet.herokuapp.com/">GHCN Weather Stations</a>" </li>
-      <p>Query a database of weather stations in the GHCN archive based on location.
-        The <a target="_blank" href="https://github.com/douglasdrake/GHCN-stations">github repo</a> for this project.
-      </p>
-      <li><a target="_blank" href="https://bellybuttonbiodiversitydrake.herokuapp.com/">Biodiversity Dashboard</a>
-        <p> Visualization of bacterial biodiversity of belly buttons.
-          The <a target="_blank" href="https://github.com/douglasdrake/myheroku">github repo</a> for this project.
+      <li> Heroku Apps</li>
+      <ul>
+        <li><a target="_blank" href="https://ghcn-leaflet.herokuapp.com/">GHCN Weather Stations</a> </li>
+        <p>Query a database of weather stations in the GHCN archive based on location.
+          The <a target="_blank" href="https://github.com/douglasdrake/GHCN-stations">github repo</a> for this project.
         </p>
+        <li><a target="_blank" href="https://bellybuttonbiodiversitydrake.herokuapp.com/">Biodiversity Dashboard</a>
+          <p> Visualization of bacterial biodiversity of belly buttons.
+            The <a target="_blank" href="https://github.com/douglasdrake/myheroku">github repo</a> for this project.
+          </p>
+      </ul>
+      <li>Data Visualizations</li>
+      <ul>
+        <li><a target="_blank" href="https://douglasdrake.github.io/weather/">Latitude</a>.</li>
+        <p>An HTML dashboard of meteorological data.
+          The <a target="_blank" href="https://github.com/douglasdrake/weather">github repo</a> for the dashboard and
+          the <a target="_blank" href="https://github.com/douglasdrake/WeatherData">github repo</a>.
+          for the methods used to collect the data.
+        </p>
+        <li><a target="_blank" href="https://douglasdrake.github.io/geojson/">Geological Data</a>.</li>
+        <p>
+          A Leaflet map of earthquake activity. The <a target="_blank"
+            href="https://github.com/douglasdrake/geojson">github repot</a> for this data.
+        </p>
+      </ul>
+      <li> ETL</li>
+      <ul>
+        <li><a target="_blank" href="https://dkloepper.github.io/ncs1ml/index.html">Web scraping and ETL</a></li>
+        <p>As part of a group project,
+          <a target="_blank"
+            href="https://github.com/Justinmatt21/NCS-1MLProject/blob/master/dougstuff/Data%20Preparation.pptx">my
+            role</a> involved
+          webscraping data, data cleaning, and fitting a predictive model
+          with the results. The <a target="_blank"
+            href="https://github.com/Justinmatt21/NCS-1MLProject/tree/master/dougstuff">github repo</a>.
+        </p>
+      </ul>
     </ul>
-    <li>Data Visualizations</li>
+
+    <h2>Skills</h2>
     <ul>
-      <li><a target="_blank" href="https://douglasdrake.github.io/weather/">Latitude</a>.</li>
-      <p>An HTML dashboard of meteorological data.
-        The <a target="_blank" href="https://github.com/douglasdrake/weather">github repo</a> for the dashboard and
-        the <a target="_blank" href="https://github.com/douglasdrake/WeatherData">github repo</a>.
-        for the methods used to collect the data.
-      </p>
-      <li><a target="_blank" href="https://douglasdrake.github.io/geojson/">Geological Data</a>.</li>
+      <li>Programming Languages</li>
       <p>
-        A Leaflet map of earthquake activity. The <a target="_blank"
-          href="https://github.com/douglasdrake/geojson">github repot</a> for this data.
+        Python, R, VBA, JavaScript, C, Lisp
       </p>
-    </ul>
-    <li> ETL</li>
-    <ul>
-      <li><a target="_blank" href="https://dkloepper.github.io/ncs1ml/index.html">Web scraping and ETL(</a></li>
-      <p>As part of a group project,
-        <a target="_blank"
-          href="https://github.com/Justinmatt21/NCS-1MLProject/blob/master/dougstuff/Data%20Preparation.pptx">my
-          role</a> involved
-        webscraping data, data cleaning, and fitting a predictive model
-        with the results. The <a target="_blank"
-          href="https://github.com/Justinmatt21/NCS-1MLProject/tree/master/dougstuff">github repo</a>.
-      </p>
-    </ul>
-  </ul>
 
-  <h2>Skills</h2>
-  <ul>
-    <li>Programming Languages</li>
+      <li>Tools for Visualization</li>
+      <p> matplotlib, seaborn, R base graphics, lattice, ggplot2, Plot.ly, D3, Leaflet.
+      </p>
+      <li>Database</li>
+      <p>SQL, MongoDB</p>
+
+      <li>Tools for Data Analysis</li>
+      <p><a target="_blank" href="https://www.r-project.org/">R</a>,
+        <a target="_blank" href="https://pandas.pydata.org/">Pandas</a>,
+        <a target="_blank" href="https://www.scipy.org/">SciPy</a>,
+        <a target="_blank" href="http://www.statsmodels.org/stable/index.html">StatsModels</a> </p>
+
+      <li> Tools for Machine Learning and Predictive Model Building</li>
+      <p> <a target="_blank" href="https://scikit-learn.org/stable/">scikit-learn</a>,
+        <a target="_blank" href="https://keras.io/">Keras</a>,
+        <a target="_blank" href="http://topepo.github.io/caret/index.html">caret</a>
+      </p>
+      <li>Web design</li>
+      <p>HTML, CSS, JavaScript
+      </p>
+    </ul>
+
+    <h2>Education</h2>
     <p>
-      Python, R, VBA, JavaScript, C, Lisp
+      I recently completed the Data Visualization and Analytics Boot Camp at the University of Minnesota.
+      I have a MS in Statistics from the University of Minnesota and a BS in Mathematics from the Univerity of
+      Nebraska-Lincon.
     </p>
 
-    <li>Tools for Visualization</li>
-    <p> matplotlib, seaborn, R base graphics, lattice, ggplot2, Plot.ly, D3, Leaflet.
-    </p>
-    <li>Database</li>
-    <p>SQL, MongoDB</p>
+    <h2>Contact Information</h2>
+    <ul>
+      <li><strong>Email:</strong> <a href="#">dougdrake42@gmail.com</a></li>
+      <li><strong>Github:</strong> <a target="_blank" href="https://github.com/douglasdrake"> douglasdrake</a></li>
+      <li><strong>LinkedIn:</strong> <a target="_blank" href="https://www.linkedin.com/in/douglas-drake-146091175/">douglasdrake</a> 
+      </li> 
+    </ul> 
+  </div> 
+  <!-- Bootstrap core
+          JavaScript==================================================-->
+          <!-- Placed at the end of the document so the pages load faster -->
+          <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+          </script>
+          <script>
+            window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+          </script>
+          <script src="../../assets/js/vendor/popper.min.js"></script>
+          <script src="../../dist/js/bootstrap.min.js"></script>
+          <!-- <script src="../static/js/app.js"></script> -->
 
-    <li>Tools for Data Analysis</li>
-    <p><a target="_blank" href="https://www.r-project.org/">R</a>,
-      <a target="_blank" href="https://pandas.pydata.org/">Pandas</a>,
-      <a target="_blank" href="https://www.scipy.org/">SciPy</a>,
-      <a target="_blank" href="http://www.statsmodels.org/stable/index.html">StatsModels</a> </p>
-
-    <li> Tools for Machine Learning and Predictive Model Building</li>
-    <p> <a target="_blank" href="https://scikit-learn.org/stable/">scikit-learn</a>,
-      <a target="_blank" href="https://keras.io/">Keras</a>,
-      <a target="_blank" href="http://topepo.github.io/caret/index.html">caret</a>
-    </p>
-    <li>Web design</li>
-    <p>HTML, CSS, JavaScript
-    </p>
-  </ul>
-
-  <h2>Education</h2>
-  <p>
-    I recently completed the Data Visualization and Analytics Boot Camp at the University of Minnesota.
-    I have a MS in Statistics from the University of Minnesota and a BS in Mathematics from the Univerity of
-    Nebraska-Lincon.
-  </p>
-
-  <ul>
-    <li><strong>Email:</strong> <a href="#">dougdrake42@gmail.com</a></li>
-    <li><strong>Github:</strong> <a target="_blank" href="https://github.com/douglasdrake"> douglasdrake</a></li>
-  </ul>
 
 </body>
 
