--- a/index.html
+++ b/index.html
@@ -110,22 +110,23 @@
     <ul>
       <li><strong>Email:</strong> <a href="#">dougdrake42@gmail.com</a></li>
       <li><strong>Github:</strong> <a target="_blank" href="https://github.com/douglasdrake"> douglasdrake</a></li>
-      <li><strong>LinkedIn:</strong> <a target="_blank" href="https://www.linkedin.com/in/douglas-drake-146091175/">douglasdrake</a> 
-      </li> 
-    </ul> 
-  </div> 
+      <li><strong>LinkedIn:</strong> <a target="_blank"
+          href="https://www.linkedin.com/in/douglas-drake-146091175/">douglasdrake</a>
+      </li>
+    </ul>
+  </div>
   <!-- Bootstrap core
           JavaScript==================================================-->
-          <!-- Placed at the end of the document so the pages load faster -->
-          <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-          </script>
-          <script>
-            window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
-          </script>
-          <script src="../../assets/js/vendor/popper.min.js"></script>
-          <script src="../../dist/js/bootstrap.min.js"></script>
-          <!-- <script src="../static/js/app.js"></script> -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script>
+    window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+  </script>
+  <script src="../../assets/js/vendor/popper.min.js"></script>
+  <script src="../../dist/js/bootstrap.min.js"></script>
+  <!-- <script src="../static/js/app.js"></script> -->
 
 
 </body>
