--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
       </ul>
       <li>Data Visualizations</li>
       <ul>
-        <li><a target="_blank" href="https://douglasdrake.github.io/weather/">Latitude</a>.</li>
+        <li><a target="_blank" href="https://douglasdrake.github.io/weather/">Latitude</a></li>
         <p>An HTML dashboard of meteorological data.
           The <a target="_blank" href="https://github.com/douglasdrake/weather">github repo</a> for the dashboard and
           the <a target="_blank" href="https://github.com/douglasdrake/WeatherData">github repo</a>.
           for the methods used to collect the data.
         </p>
-        <li><a target="_blank" href="https://douglasdrake.github.io/geojson/">Geological Data</a>.</li>
+        <li><a target="_blank" href="https://douglasdrake.github.io/geojson/">Geological Data</a></li>
         <p>
           A Leaflet map of earthquake activity. The <a target="_blank"
-            href="https://github.com/douglasdrake/geojson">github repot</a> for this data.
+            href="https://github.com/douglasdrake/geojson">github repo</a> for this data.
         </p>
       </ul>
       <li> ETL</li>
