--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       </ul>
       <li>Data Visualizations</li>
       <ul>
+        <li><a target="_blank" href="https://douglasdrake.github.io/inventory-dashboard/">Inventory dashboard</a></li>
+        <p>An HTML dashboard of available weather stations in the GHCN Archive.
+          The <a target="_blank" href="https://github.com/douglasdrake/inventory-dashboard">github repo</a> for the dashboard.
+        </p>
         <li><a target="_blank" href="https://douglasdrake.github.io/weather/">Latitude</a></li>
         <p>An HTML dashboard of meteorological data.
           The <a target="_blank" href="https://github.com/douglasdrake/weather">github repo</a> for the dashboard and
