--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
   -->
 
     <h2>Introduction</h2>
-
+  <p>I have managed all aspects of inbound freight including staffing, scheduling, payroll, and planning in a retail establishment 
+    with $90 million in annual sales.  I have also led a full-store remodel and the team responsible for transitions on the salesfloor.  
+    I have a M.S. in statistics and am experienced in Excel, VBA, R, and Python.  A passion for acquiring new skills in programming 
+    and data analysis.  
+    I am able to leverage my background in statistics and leadership experience to work collaboratively with a data analytics team.</p>
+    
     <h2>Projects</h2>
     <ul>
       <li> Heroku Apps</li>
