--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <h2>Introduction</h2>
   <p>I have managed all aspects of inbound freight including staffing, scheduling, payroll, and planning in a retail establishment 
-    with $90 million in annual sales.  I have also led a full-store remodel and the team responsible for transitions on the salesfloor.  
+    with $100 million in annual sales.  I have led a full-store remodel and the teams responsible for transitions on the salesfloor.  
     I have a M.S. in statistics and am experienced in Excel, VBA, R, and Python.  A passion for acquiring new skills in programming 
     and data analysis.  
     I am able to leverage my background in statistics and leadership experience to work collaboratively with a data analytics team.</p>
@@ -38,11 +38,11 @@
     <ul>
       <li> Heroku Apps</li>
       <ul>
-        <li><a target="_blank" href="https://ghcn-leaflet.herokuapp.com/">GHCN Weather Stations</a> </li>
+        <li><a target="_blank" href="https://ghcn-mapping-stations-39b8729885c5.herokuapp.com/">GHCN Weather Stations</a> </li>
         <p>Query a database of weather stations in the GHCN archive based on location.
           The <a target="_blank" href="https://github.com/douglasdrake/GHCN-stations">github repo</a> for this project.
         </p>
-        <li><a target="_blank" href="https://bellybuttonbiodiversitydrake.herokuapp.com/">Biodiversity Dashboard</a>
+        <li><a target="_blank" href="https://bb-diversity-app-4e1679014ed8.herokuapp.com/">Biodiversity Dashboard</a>
           <p> Visualization of bacterial biodiversity of belly buttons.
             The <a target="_blank" href="https://github.com/douglasdrake/myheroku">github repo</a> for this project.
           </p>
@@ -90,7 +90,7 @@
       <p> matplotlib, seaborn, R base graphics, lattice, ggplot2, Plot.ly, D3, Leaflet.
       </p>
       <li>Database</li>
-      <p>SQL, MongoDB</p>
+      <p>SQL, DuckDB, PostgreSQL, MongoDB</p>
 
       <li>Tools for Data Analysis</li>
       <p><a target="_blank" href="https://www.r-project.org/">R</a>,
@@ -110,7 +110,7 @@
 
     <h2>Education</h2>
     <p>
-      I recently completed the Data Visualization and Analytics Boot Camp at the University of Minnesota.
+      I completed the Data Visualization and Analytics Boot Camp at the University of Minnesota.
       I have a MS in Statistics from the University of Minnesota and a BS in Mathematics from the Univerity of
       Nebraska-Lincon.
     </p>
