Adding Shiny R app

--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
 
     <h2>Introduction</h2>
   <p>I have managed all aspects of inbound freight including staffing, scheduling, payroll, and planning in a retail establishment 
-    with $100 million in annual sales.  I have led a full-store remodel and the teams responsible for transitions on the salesfloor.  
+    with $120 million in annual sales.  I have led a full-store remodel and the teams responsible for transitions on the salesfloor.  
     I have a M.S. in statistics and am experienced in Excel, VBA, R, and Python.  A passion for acquiring new skills in programming 
     and data analysis.  
     I am able to leverage my background in statistics and leadership experience to work collaboratively with a data analytics team.</p>
     
     <h2>Projects</h2>
     <ul>
-      <li> Heroku Apps</li>
+      <li> Shiny and Heroku Apps</li>
       <ul>
+        <li><a target="_blank" href="https://0198350e-9fc7-b648-3f4a-1c47e53cddb3.share.connect.posit.cloud/">Age Pyramids</a> </li>
+        <p>Visualization of age and gender distributions for U.S. states from 1970 - 2023.
+          The <a target="_blank" href="https://github.com/douglasdrake/AgePyramids">github repo</a> for this project.
+        </p>
         <li><a target="_blank" href="https://ghcn-mapping-stations-39b8729885c5.herokuapp.com/">GHCN Weather Stations</a> </li>
         <p>Query a database of weather stations in the GHCN archive based on location.
           The <a target="_blank" href="https://github.com/douglasdrake/GHCN-stations">github repo</a> for this project.
