--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
       <li><strong>Email:</strong> <a href="#">dougdrake42@gmail.com</a></li>
       <li><strong>Github:</strong> <a target="_blank" href="https://github.com/douglasdrake"> douglasdrake</a></li>
       <li><strong>LinkedIn:</strong> <a target="_blank"
-          href="https://www.linkedin.com/in/douglas-drake-146091175/">douglasdrake</a>
+          href="https://www.linkedin.com/in/douglas-a-drake/">douglasdrake</a>
+          <!-- old "https://www.linkedin.com/in/douglas-drake-146091175/"-->
       </li>
     </ul>
   </div>
